--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,10 +1,11 @@
+@import url(colors.css);
 nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
     position: sticky;
     top: 0;
-    background-color: #001233;
+    background-color: var(--beige);
     width: 100%;
     box-sizing: border-box;
     display: flex;
@@ -14,7 +15,7 @@ nav {
 }
 nav a.navbar {
     display: flex;
-    color: #1e51cf;
+    color: var(--green);
     align-items:center;
     padding: 0px 50px;
     margin:0;
@@ -31,7 +32,7 @@ nav a.navbar::before {
     left: -100%;
     width: 100%;
     height: 100%;
-    background-color: #979DAC;
+    background-color: var(--dark-beige);
     transition: left 0.5s ease-in-out;
     z-index:0;
 }
@@ -46,7 +47,7 @@ nav a.navbar span{
 nav a.navtitle{
     color:#E3DDB1;
     font-family:afacad-bold;
-    font-size:30px;
+    font-size:40px;
     padding:10px;
     margin:0;
     margin-right: auto;
