--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,12 @@
 @import url('./fonts.css');
 @import url('./navbar.css');
-
+@import url(colors.css);
 body {
-    background-color: #EFEBCE;
+    background-color: var(--whiteish);
     margin: 0;
     padding: 0;
 }
 
-
-h1 {
-    color: #003049;
-    text-align: center;
-    font-size: 50px;
-    font-family: afacad-bold;
-    margin:0;
-    padding:15px;
-    background-color: s#E3DDB1;
-}
 h2 {
     color: #c0bdb3;
     text-align: left;
@@ -43,25 +33,38 @@ p {
     width: 100px;
     height: 50px;
     background-color: lightblue;
-    margin: 10px;
+    cursor: move; /* fallback if grab cursor is unsupported */
     cursor: grab;
+    cursor: -moz-grab;
+    cursor: -webkit-grab;
     text-align: center;
     line-height: 50px;
+    position: absolute;
+}
+
+.draggable:active {
+    cursor: grabbing;
+    cursor: -moz-grabbing;
+    cursor: -webkit-grabbing;
+    background-color: lightcoral;
 }
 
 #game-container {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
 }
 
 #blocks, #drop-zone {
     width: 200px;
     min-height: 200px;
-    padding: 10px;
-    border: 2px #000;
+    padding: 0px;
+    border: 2px #000000;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    position:relative;
+}
+#drop-zone{
+    background-color: #c51e1e;
+    z-index: -2;
 }
