--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,13 @@ p {
     width: 100px;
     height: 50px;
     background-color: lightblue;
-    cursor: move; /* fallback if grab cursor is unsupported */
+    cursor: move; 
     cursor: grab;
     cursor: -moz-grab;
     cursor: -webkit-grab;
     text-align: center;
     line-height: 50px;
-    position: absolute;
+    position: relative;
 }
 
 .draggable:active {
@@ -59,10 +59,12 @@ p {
     min-height: 200px;
     padding: 0px;
     border: 2px #000000;
+    position:relative;
+    background-color: #c51e1e;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    position:relative;
+    gap: 10px;
+    align-items: center;
 }
 #drop-zone{
     background-color: #c51e1e;
