--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p {
     justify-content: space-around;
 }
 
-#blocks, #drop-zone {
+#blocks, .drop-zone {
     width: 200px;
     min-height: 200px;
     padding: 0px;
@@ -66,7 +66,12 @@ p {
     gap: 10px;
     align-items: center;
 }
-#drop-zone{
+.drop-zone{
     background-color: #c51e1e;
     z-index: -2;
+}
+@keyframes bob {
+    from { transform: scale(1); }
+    50% { transform: scale(1.1); }
+    to { transform: scale(1); }
 }
