--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ p {
     background-color: lightcoral;
 }
 
-#game-container {
+.game-container {
     display: flex;
     justify-content: space-around;
 }
@@ -65,13 +65,18 @@ p {
     flex-direction: column;
     gap: 10px;
     align-items: center;
+    z-index:1
 }
 .drop-zone{
     background-color: #c51e1e;
-    z-index: -2;
+    z-index: 0;
 }
 @keyframes bob {
     from { transform: scale(1); }
     50% { transform: scale(1.1); }
     to { transform: scale(1); }
+}
+canvas {
+    position: relative;
+    z-index: 0
 }
