--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,6 +22,7 @@ nav a.navbar {
     margin:0;
     text-decoration: none;
     font-family: barlow-semi;
+    font-size: 22px;
     position: relative;
     overflow: hidden;
     height:100%
